# cpm-recursive-test

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONFLUENCE.txt  README.md  README2.md  build.sh  main.cpp  package-lock.cmake
ProjectA/: CMakeLists.txt
ProjectA/include/: project_a.hpp
ProjectA/src/: project_a.cpp
ProjectB/: CMakeLists.txt
ProjectB/include/: project_b.hpp
ProjectB/src/: project_b.cpp
ProjectC/: CMakeLists.txt
ProjectC/include/: project_c.hpp
ProjectC/src/: project_c.cpp
cmake/: .cmake-format-additional_commands-cpm  CPM-dz-patched-README.md  CPM-dz-patched.cmake  CPM.cmake  CPMSetup.cmake  cpm_valid_version.cmake
hal/: CMakeLists.txt
hal/crypto/: CMakeLists.txt
hal/crypto/include/: crypto.hpp
hal/crypto/src/: crypto.cpp
hal/crypto/unit_tests/: CMakeLists.txt  crypto_test.cpp
hal/gpio/: CMakeLists.txt
hal/patches/nlohmann_json/: 01-add-custom-comment.patch  02-customize-namespace.patch
hal/spi/: CMakeLists.txt
hal/spi/include/: spi.hpp
hal/spi/src/: project_a.cpp  spi.cpp
hal/spi/unit_tests/: CMakeLists.txt  spi_test.cpp
src/: CMakeLists.txt  main.cpp
upper_layer/: CMakeLists.txt
upper_layer/osal/: CMakeLists.txt
upper_layer/osal/include/: osal.hpp
upper_layer/osal/src/: osal.cpp  project_c.cpp
upper_layer/osal/unit_tests/: CMakeLists.txt  osal_test.cpp
